--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pyler.xinternalsd"
-    android:versionCode="406"
-    android:versionName="4.1-beta2" >
+    android:versionCode="410"
+    android:versionName="4.1" >
 
     <uses-sdk
         android:minSdkVersion="15"
